TP2 : Fichier Properties et Base distante

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
-database.driver=org.mariadb.jdbc.Driver
-database.url=jdbc:mariadb://localhost:3306/pizzeria
-database.user=user127
-database.password=wsgskj74&!
+database.driver=com.mysql.cj.jdbc.Driver
+database.url=jdbc:mysql://u1pkza0zi0bfmtxr:6vDqHqOnYX61tJvqL25O@bvovrwbixjmmwmtekl0g-mysql.services.clever-cloud.com:3306/bvovrwbixjmmwmtekl0g
+database.user=u1pkza0zi0bfmtxr
+database.password=6vDqHqOnYX61tJvqL25O
