--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,21 @@
   <artifactId>demo-jdbc</artifactId>
   <version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	
 
+	<dependencies>
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		
+		<dependency> 
+		 <groupId>mysql</groupId>  
+		<artifactId>mysql-connector-java</artifactId>  
+		<version>8.0.20</version>
+		</dependency>
+	</dependencies>
+	
+	
 </project>
